...
          icon: productsList.items.contains(itemNo)
              ? Icon(Icons.remove)
              : Icon(Icons.add),
           onPressed: () {
            if (!productsList.items.contains(itemNo)) {
              productsList.add(itemNo);
              _showSnackBar(context, 'Sepete Eklendi');
            } else {
              productsList.remove(itemNo);
              _showSnackBar(context, 'Sepetten Kaldırıldı');
            }
           }
        ),
      ),
    );
  }
...
